<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weather">Погода</string>
    <string name="temperature">Температура</string>
    <string name="humidity">Влажность</string>
    <string name="city">Город</string>
    <string name="pressure">Давление</string>
    <string name="windSpeed">Скорость ветра</string>
    <string name="getWeather">Узнать погоду</string>
    <string name="empty">Список город пуст</string>
    <string name="date">Дата</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="feedback">Форма обратной связи</string>
    <string name="about_developer">О разработчике</string>
    <string name="now">Сейчас</string>
    <string name="find">Find</string>
    <string name="find_by_coord">Find by coord</string>

    <string-array name="Cities">
        <item>Moscow,ru</item>
        <item>Saint Petersburg,ru</item>
        <item>Yekaterinburg,ru</item>
        <item>Novosibirsk,ru</item>
        <item>Samara,ru</item>
    </string-array>

</resources>
